Finished an item meant for tomorrow today

--- a/todo.html
+++ b/todo.html
@@ -54,13 +54,9 @@ Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
 <li><input type="checkbox" disabled="" />
-Derivation Week 37 mathematics-I #mathematic</li>
+Derivation Week 37 mathematics-I #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Fix delete cube bug #programming</li>
-<li><input type="checkbox" disabled="" />
-Write solve polynomial code #programming</li>
-<li><input type="checkbox" disabled="" />
-Do Modern Graphics Programming files #programming</li>
 <li><input type="checkbox" disabled="" />
 Read a book 20 minutes #recreation</li>
 <li><input type="checkbox" disabled="" />
@@ -83,6 +79,10 @@ Go to 3d lecture</li>
 Go for a long walk early</li>
 <li><input type="checkbox" disabled="" checked="" />
 Watch 5 Modeling Tools You Need To Make ANYTHING in Blender <a href="https://www.youtube.com/watch?v=kejQ8nX5YZA">https://www.youtube.com/watch?v=kejQ8nX5YZA</a></li>
+<li><input type="checkbox" disabled="" checked="" />
+Write solve polynomial code #programming</li>
+<li><input type="checkbox" disabled="" />
+Write script to do Modern Graphics Programming files (currently on tut05 out of tut18) #programming</li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
