--- a/todo.html
+++ b/todo.html
@@ -40,8 +40,6 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Clean kitchen #home</li>
-<li><input type="checkbox" disabled="" />
 Make wash water #home</li>
 <li><input type="checkbox" disabled="" />
 Wash bathroom floor #home</li>
@@ -81,6 +79,8 @@ Go for a long walk early</li>
 Watch 5 Modeling Tools You Need To Make ANYTHING in Blender <a href="https://www.youtube.com/watch?v=kejQ8nX5YZA">https://www.youtube.com/watch?v=kejQ8nX5YZA</a></li>
 <li><input type="checkbox" disabled="" checked="" />
 Write solve polynomial code #programming</li>
+<li><input type="checkbox" disabled="" checked="" />
+Clean kitchen #home</li>
 <li><input type="checkbox" disabled="" />
 Write script to do Modern Graphics Programming files (currently on tut05 out of tut18) #programming</li>
 </ul>
