--- a/todo.html
+++ b/todo.html
@@ -38,17 +38,28 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<ul class="task-list">
-<li><input type="checkbox" disabled="" />
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<ul>
+<li><input type="checkbox" disabled="" checked="" />
 Make wash water #home</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Wash bathroom floor #home</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Wash bathroom walls #home</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Wash bathroom sink #home</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go for a long walk early #health</li>
+<li><input type="checkbox" disabled="" />
+Watch How to USE These 6 Basic Blender MATERIALS: Eevee and Cycles Tutorial <a href="https://www.youtube.com/watch?v=CN9ggYpl9SU">https://www.youtube.com/watch?v=CN9ggYpl9SU</a></li>
+<li><input type="checkbox" disabled="" />
+Watch Intro to Blender UV Mapping <a href="https://www.youtube.com/watch?v=GTd8NBg8EZU">https://www.youtube.com/watch?v=GTd8NBg8EZU</a></li>
+<li><input type="checkbox" disabled="" />
+Watch All 80+ Blender material nodes explained in under 30 minutes <a href="https://www.youtube.com/watch?v=cQ0qtcSymDI">https://www.youtube.com/watch?v=cQ0qtcSymDI</a></li>
+<li>[ ] Watch Texture Painting - Quick Start Guide - Blender <a href="https://www.youtube.com/watch?v=WjS_zNQNVlw">https://www.youtube.com/watch?v=WjS_zNQNVlw</a></li>
+<li><input type="checkbox" disabled="" />
+Watch The Complete Guide to UV Unwrapping for the 3D Artist - Where &amp; Why Marking Seams <a href="https://www.youtube.com/watch?v=jnzhNdWoXMg">https://www.youtube.com/watch?v=jnzhNdWoXMg</a></li>
 <li><input type="checkbox" disabled="" />
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
 <li><input type="checkbox" disabled="" />
@@ -61,26 +72,6 @@ Read a book 20 minutes #recreation</li>
 Meditate for 20 minutes #health</li>
 <li><input type="checkbox" disabled="" />
 Exam Practice Mathematics #mathematics</li>
-</ul>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Wash shoes</li>
-<li><input type="checkbox" disabled="" checked="" />
-Blender for Beginners: Easy Froggy! <a href="https://www.youtube.com/watch?v=rEBwBrRzyhw">https://www.youtube.com/watch?v=rEBwBrRzyhw</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Blender Basics - Subdivision Surface Modifier Tutorial <a href="https://www.youtube.com/watch?v=NAwf0Tuuwjw">https://www.youtube.com/watch?v=NAwf0Tuuwjw</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Go to 3d lecture</li>
-<li><input type="checkbox" disabled="" checked="" />
-Go for a long walk early</li>
-<li><input type="checkbox" disabled="" checked="" />
-Watch 5 Modeling Tools You Need To Make ANYTHING in Blender <a href="https://www.youtube.com/watch?v=kejQ8nX5YZA">https://www.youtube.com/watch?v=kejQ8nX5YZA</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Write solve polynomial code #programming</li>
-<li><input type="checkbox" disabled="" checked="" />
-Clean kitchen #home</li>
 <li><input type="checkbox" disabled="" />
 Write script to do Modern Graphics Programming files (currently on tut05 out of tut18) #programming</li>
 </ul>
