Finished the first video. Also, burnt my food a little

--- a/todo.html
+++ b/todo.html
@@ -51,7 +51,7 @@ Wash bathroom walls #home</li>
 Wash bathroom sink #home</li>
 <li><input type="checkbox" disabled="" checked="" />
 Go for a long walk early #health</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Watch How to USE These 6 Basic Blender MATERIALS: Eevee and Cycles Tutorial <a href="https://www.youtube.com/watch?v=CN9ggYpl9SU">https://www.youtube.com/watch?v=CN9ggYpl9SU</a></li>
 <li><input type="checkbox" disabled="" />
 Watch Intro to Blender UV Mapping <a href="https://www.youtube.com/watch?v=GTd8NBg8EZU">https://www.youtube.com/watch?v=GTd8NBg8EZU</a></li>
