Made a newline after inbox

--- a/todo.html
+++ b/todo.html
@@ -39,41 +39,45 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul>
-<li><p><input type="checkbox" disabled="" />
-Start washing up machine</p></li>
-<li><p><input type="checkbox" disabled="" />
-Watch Intro to Blender UV Mapping <a href="https://www.youtube.com/watch?v=GTd8NBg8EZU">https://www.youtube.com/watch?v=GTd8NBg8EZU</a></p></li>
-<li><p><input type="checkbox" disabled="" />
-Watch All 80+ Blender material nodes explained in under 30 minutes <a href="https://www.youtube.com/watch?v=cQ0qtcSymDI">https://www.youtube.com/watch?v=cQ0qtcSymDI</a></p></li>
-<li><p>[ ] Watch Texture Painting - Quick Start Guide - Blender <a href="https://www.youtube.com/watch?v=WjS_zNQNVlw">https://www.youtube.com/watch?v=WjS_zNQNVlw</a></p></li>
-<li><p><input type="checkbox" disabled="" />
-Watch The Complete Guide to UV Unwrapping for the 3D Artist - Where &amp; Why Marking Seams <a href="https://www.youtube.com/watch?v=jnzhNdWoXMg">https://www.youtube.com/watch?v=jnzhNdWoXMg</a></p></li>
-<li><p><input type="checkbox" disabled="" />
-Compulsory 1 -&gt; 22-september-2023 #intro-3d</p></li>
-<li><p><input type="checkbox" disabled="" />
-Derivation Week 37 mathematics-I #mathematics</p></li>
-<li><p><input type="checkbox" disabled="" />
-Fix delete cube bug #programming</p></li>
-<li><p><input type="checkbox" disabled="" />
-Read a book 20 minutes #recreation</p></li>
-<li><p><input type="checkbox" disabled="" />
-Meditate for 20 minutes #health</p></li>
-<li><p><input type="checkbox" disabled="" />
-Exam Practice Mathematics #mathematics</p></li>
-<li><p><input type="checkbox" disabled="" />
-Write script to do Modern Graphics Programming files (currently on tut05 out of tut18) #programming # Action ###### Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</p></li>
-<li><p><input type="checkbox" disabled="" checked="" />
-Make wash water #home</p></li>
-<li><p><input type="checkbox" disabled="" checked="" />
-Wash bathroom floor #home</p></li>
-<li><p><input type="checkbox" disabled="" checked="" />
-Wash bathroom walls #home</p></li>
-<li><p><input type="checkbox" disabled="" checked="" />
-Wash bathroom sink #home</p></li>
-<li><p><input type="checkbox" disabled="" checked="" />
-Go for a long walk early #health</p></li>
-<li><p><input type="checkbox" disabled="" checked="" />
-Watch How to USE These 6 Basic Blender MATERIALS: Eevee and Cycles Tutorial <a href="https://www.youtube.com/watch?v=CN9ggYpl9SU">https://www.youtube.com/watch?v=CN9ggYpl9SU</a></p></li>
+<li><input type="checkbox" disabled="" />
+Start washing up machine</li>
+<li><input type="checkbox" disabled="" />
+Watch Intro to Blender UV Mapping <a href="https://www.youtube.com/watch?v=GTd8NBg8EZU">https://www.youtube.com/watch?v=GTd8NBg8EZU</a></li>
+<li><input type="checkbox" disabled="" />
+Watch All 80+ Blender material nodes explained in under 30 minutes <a href="https://www.youtube.com/watch?v=cQ0qtcSymDI">https://www.youtube.com/watch?v=cQ0qtcSymDI</a></li>
+<li>[ ] Watch Texture Painting - Quick Start Guide - Blender <a href="https://www.youtube.com/watch?v=WjS_zNQNVlw">https://www.youtube.com/watch?v=WjS_zNQNVlw</a></li>
+<li><input type="checkbox" disabled="" />
+Watch The Complete Guide to UV Unwrapping for the 3D Artist - Where &amp; Why Marking Seams <a href="https://www.youtube.com/watch?v=jnzhNdWoXMg">https://www.youtube.com/watch?v=jnzhNdWoXMg</a></li>
+<li><input type="checkbox" disabled="" />
+Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Derivation Week 37 mathematics-I #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Fix delete cube bug #programming</li>
+<li><input type="checkbox" disabled="" />
+Read a book 20 minutes #recreation</li>
+<li><input type="checkbox" disabled="" />
+Meditate for 20 minutes #health</li>
+<li><input type="checkbox" disabled="" />
+Exam Practice Mathematics #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Write script to do Modern Graphics Programming files (currently on tut05 out of tut18) #programming</li>
+</ul>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />
+Make wash water #home</li>
+<li><input type="checkbox" disabled="" checked="" />
+Wash bathroom floor #home</li>
+<li><input type="checkbox" disabled="" checked="" />
+Wash bathroom walls #home</li>
+<li><input type="checkbox" disabled="" checked="" />
+Wash bathroom sink #home</li>
+<li><input type="checkbox" disabled="" checked="" />
+Go for a long walk early #health</li>
+<li><input type="checkbox" disabled="" checked="" />
+Watch How to USE These 6 Basic Blender MATERIALS: Eevee and Cycles Tutorial <a href="https://www.youtube.com/watch?v=CN9ggYpl9SU">https://www.youtube.com/watch?v=CN9ggYpl9SU</a></li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
