--- a/todo.html
+++ b/todo.html
@@ -38,9 +38,15 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<ul>
+<ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Start washing up machine</li>
+<li><input type="checkbox" disabled="" />
+Buy toilet paper</li>
+</ul>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<ul>
 <li><input type="checkbox" disabled="" />
 Watch Intro to Blender UV Mapping <a href="https://www.youtube.com/watch?v=GTd8NBg8EZU">https://www.youtube.com/watch?v=GTd8NBg8EZU</a></li>
 <li><input type="checkbox" disabled="" />
@@ -62,22 +68,8 @@ Meditate for 20 minutes #health</li>
 Exam Practice Mathematics #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Write script to do Modern Graphics Programming files (currently on tut05 out of tut18) #programming</li>
-</ul>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Make wash water #home</li>
-<li><input type="checkbox" disabled="" checked="" />
-Wash bathroom floor #home</li>
-<li><input type="checkbox" disabled="" checked="" />
-Wash bathroom walls #home</li>
-<li><input type="checkbox" disabled="" checked="" />
-Wash bathroom sink #home</li>
-<li><input type="checkbox" disabled="" checked="" />
+<li><input type="checkbox" disabled="" />
 Go for a long walk early #health</li>
-<li><input type="checkbox" disabled="" checked="" />
-Watch How to USE These 6 Basic Blender MATERIALS: Eevee and Cycles Tutorial <a href="https://www.youtube.com/watch?v=CN9ggYpl9SU">https://www.youtube.com/watch?v=CN9ggYpl9SU</a></li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
