--- a/todo.html
+++ b/todo.html
@@ -47,12 +47,12 @@ Buy toilet paper</li>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Watch Intro to Blender UV Mapping <a href="https://www.youtube.com/watch?v=GTd8NBg8EZU">https://www.youtube.com/watch?v=GTd8NBg8EZU</a></li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Watch All 80+ Blender material nodes explained in under 30 minutes <a href="https://www.youtube.com/watch?v=cQ0qtcSymDI">https://www.youtube.com/watch?v=cQ0qtcSymDI</a></li>
-<li>[ ] Watch Texture Painting - Quick Start Guide - Blender <a href="https://www.youtube.com/watch?v=WjS_zNQNVlw">https://www.youtube.com/watch?v=WjS_zNQNVlw</a></li>
-<li><input type="checkbox" disabled="" />
+<li>[x] Watch Texture Painting - Quick Start Guide - Blender <a href="https://www.youtube.com/watch?v=WjS_zNQNVlw">https://www.youtube.com/watch?v=WjS_zNQNVlw</a></li>
+<li><input type="checkbox" disabled="" checked="" />
 Watch The Complete Guide to UV Unwrapping for the 3D Artist - Where &amp; Why Marking Seams <a href="https://www.youtube.com/watch?v=jnzhNdWoXMg">https://www.youtube.com/watch?v=jnzhNdWoXMg</a></li>
 <li><input type="checkbox" disabled="" />
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
