--- a/todo.html
+++ b/todo.html
@@ -40,30 +40,23 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul>
-<li><input type="checkbox" disabled="" checked="" />
-Watch Intro to Blender UV Mapping <a href="https://www.youtube.com/watch?v=GTd8NBg8EZU">https://www.youtube.com/watch?v=GTd8NBg8EZU</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Watch All 80+ Blender material nodes explained in under 30 minutes <a href="https://www.youtube.com/watch?v=cQ0qtcSymDI">https://www.youtube.com/watch?v=cQ0qtcSymDI</a></li>
-<li>[x] Watch Texture Painting - Quick Start Guide - Blender <a href="https://www.youtube.com/watch?v=WjS_zNQNVlw">https://www.youtube.com/watch?v=WjS_zNQNVlw</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Watch The Complete Guide to UV Unwrapping for the 3D Artist - Where &amp; Why Marking Seams <a href="https://www.youtube.com/watch?v=jnzhNdWoXMg">https://www.youtube.com/watch?v=jnzhNdWoXMg</a></li>
+<ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
 <li><input type="checkbox" disabled="" />
-Derivation Week 37 mathematics-I #mathematics</li>
-<li><input type="checkbox" disabled="" />
-Fix delete cube bug #programming</li>
+Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
 Read a book 20 minutes #recreation</li>
 <li><input type="checkbox" disabled="" />
 Meditate for 20 minutes #health</li>
 <li><input type="checkbox" disabled="" />
-Exam Practice Mathematics #mathematics</li>
+Derivation Week 37 mathematics-I #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Write script to do Modern Graphics Programming files (currently on tut05 out of tut18) #programming</li>
 <li><input type="checkbox" disabled="" />
-Go for a long walk early #health</li>
+Fix delete cube bug #programming</li>
+<li><input type="checkbox" disabled="" />
+Exam Practice Mathematics #mathematics</li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
