--- a/todo.html
+++ b/todo.html
@@ -38,12 +38,20 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Make mushroom guy as practice #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Fix delete cube bug #programming</li>
+<li><input type="checkbox" disabled="" />
+Exam Practice Mathematics #mathematics</li>
+</ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" checked="" />
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
 Read a book 20 minutes #recreation</li>
@@ -53,10 +61,6 @@ Meditate for 20 minutes #health</li>
 Derivation Week 37 mathematics-I #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Write script to do Modern Graphics Programming files (currently on tut05 out of tut18) #programming</li>
-<li><input type="checkbox" disabled="" />
-Fix delete cube bug #programming</li>
-<li><input type="checkbox" disabled="" />
-Exam Practice Mathematics #mathematics</li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
@@ -76,9 +80,9 @@ Complete Semester 1 Game School</li>
 Compulsory 1 -&gt; 1-september-2023 #programming-I</li>
 <li><input type="checkbox" disabled="" checked="" />
 Oblig 1 -&gt; 18-september-2023 #mathematics-I</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Compulsory 2 -&gt; 29-september-2023 #programming-I</li>
 <li><input type="checkbox" disabled="" />
 Compulsory 2 -&gt; 20-october-2023 #intro-3d</li>
