Will not move things back to inbox again in the future

--- a/todo.html
+++ b/todo.html
@@ -40,20 +40,20 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Make mushroom guy as practice #intro-3d</li>
+Make mushroom guy as practice #intro-3d -&gt; 18-september-2023</li>
 <li><input type="checkbox" disabled="" />
-Fix delete cube bug #programming</li>
+Implement polynomial multiplication #programming</li>
 <li><input type="checkbox" disabled="" />
-Exam Practice Mathematics #mathematics</li>
+Implement polynomial devision #programming</li>
+<li><input type="checkbox" disabled="" />
+Implement PEMDAS, use a tree data structure #programming</li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" checked="" />
-Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
+Go for a long walk early #health</li>
+<li><input type="checkbox" disabled="" checked="" />
 Read a book 20 minutes #recreation</li>
 <li><input type="checkbox" disabled="" />
 Meditate for 20 minutes #health</li>
@@ -66,11 +66,19 @@ Write script to do Modern Graphics Programming files (currently on tut05 out of 
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Make fish as practice #intro-3d -&gt; 19-september-2023</li>
+<li><input type="checkbox" disabled="" />
+Make carrot man as practice #intro-3d -&gt; 20-september-2023</li>
+<li><input type="checkbox" disabled="" />
+Fix delete cube bug #programming</li>
+<li><input type="checkbox" disabled="" />
 Complete Piano4All</li>
 <li><input type="checkbox" disabled="" />
 Complete Blender Character Creator v2.0 for Video Games Design Course</li>
 <li><input type="checkbox" disabled="" />
 Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
+<li><input type="checkbox" disabled="" />
+Exam Practice Mathematics #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Complete Semester 1 Game School</li>
 </ul>
