--- a/todo.html
+++ b/todo.html
@@ -49,6 +49,10 @@ Implement polynomial devision #programming</li>
 Implement PEMDAS, use a tree data structure #programming</li>
 <li><input type="checkbox" disabled="" />
 Write script to do Modern Graphics Programming files (currently on tut05 out of tut18), make it as an append and append comment option in solid #programming</li>
+<li><input type="checkbox" disabled="" />
+Go for a long walk early #health</li>
+<li><input type="checkbox" disabled="" />
+Read a book 20 minutes #recreation</li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
