--- a/todo.html
+++ b/todo.html
@@ -48,7 +48,7 @@ Implement polynomial devision #programming</li>
 <li><input type="checkbox" disabled="" />
 Implement PEMDAS, use a tree data structure #programming</li>
 <li><input type="checkbox" disabled="" />
-Write script to do Modern Graphics Programming files (currently on tut05 out of tut18), make it as an append and append comment option in solid #programming</li>
+Write script to do Modern Graphics Programming files (currently on tut05 out of tut18), make it as an append and prepend comment option in solid #programming</li>
 <li><input type="checkbox" disabled="" />
 Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
