--- a/todo.html
+++ b/todo.html
@@ -41,7 +41,7 @@
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make mushroom guy as practice #intro-3d -&gt; 18-september-2023</li>
 <li><input type="checkbox" disabled="" />
 Implement polynomial multiplication #programming</li>
