--- a/todo.html
+++ b/todo.html
@@ -38,6 +38,10 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Make fish as practice #intro-3d -&gt; 19-september-2023</li>
+</ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
@@ -61,8 +65,6 @@ Read a book 20 minutes #recreation</li>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Modern Graphics Programming files #programming</li>
-<li><input type="checkbox" disabled="" />
-Make fish as practice #intro-3d -&gt; 19-september-2023</li>
 <li><input type="checkbox" disabled="" />
 Make carrot man as practice #intro-3d -&gt; 20-september-2023</li>
 <li><input type="checkbox" disabled="" />
