--- a/todo.html
+++ b/todo.html
@@ -57,7 +57,7 @@ Implement PEMDAS, use a tree data structure #programming</li>
 Write script to do Modern Graphics Programming files (currently on tut05 out of tut18), make it as an append and prepend comment option in solid #programming</li>
 <li><input type="checkbox" disabled="" />
 Go for a long walk early #health</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Read a book 20 minutes #recreation</li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
