--- a/todo.html
+++ b/todo.html
@@ -40,6 +40,8 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Go to drawing Tuesdays with Valmuen Art Addicts, at 18:00, in room B006</li>
+<li><input type="checkbox" disabled="" />
 Make fish as practice #intro-3d -&gt; 19-september-2023</li>
 </ul>
 <h1 id="action">Action</h1>
