Added going to social event to long term plan

--- a/todo.html
+++ b/todo.html
@@ -66,6 +66,8 @@ Read a book 20 minutes #recreation</li>
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Go to Valmuen brettspillkveld onsdag, B006 fra kl 17:00 til 20:30</li>
+<li><input type="checkbox" disabled="" />
 Modern Graphics Programming files #programming</li>
 <li><input type="checkbox" disabled="" />
 Make carrot man as practice #intro-3d -&gt; 20-september-2023</li>
