--- a/todo.html
+++ b/todo.html
@@ -38,18 +38,17 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<ul class="task-list">
-<li><input type="checkbox" disabled="" />
-Go to drawing Tuesdays with Valmuen Art Addicts, at 18:00, in room B006</li>
-<li><input type="checkbox" disabled="" />
-Make fish as practice #intro-3d -&gt; 19-september-2023</li>
-</ul>
+<p>[ ] Put glasses into racksack</p>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" checked="" />
-Make mushroom guy as practice #intro-3d -&gt; 18-september-2023</li>
+Go to drawing Tuesdays with Valmuen Art Addicts, at 18:00, in room B006</li>
 <li><input type="checkbox" disabled="" />
+Make fish as practice #intro-3d -&gt; 19-september-2023</li>
+<li><input type="checkbox" disabled="" checked="" />
+Make mushroom guy as practice #intro-3d -&gt; 18-september-2023</li>
+<li><input type="checkbox" disabled="" checked="" />
 Implement polynomial multiplication #programming</li>
 <li><input type="checkbox" disabled="" />
 Implement polynomial devision #programming</li>
@@ -61,12 +60,12 @@ Write script to do Modern Graphics Programming files (currently on tut05 out of 
 Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" checked="" />
 Read a book 20 minutes #recreation</li>
+<li><input type="checkbox" disabled="" />
+Go to Valmuen brettspillkveld onsdag, B006 fra kl 17:00 til 20:30</li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
-Go to Valmuen brettspillkveld onsdag, B006 fra kl 17:00 til 20:30</li>
 <li><input type="checkbox" disabled="" />
 Modern Graphics Programming files #programming</li>
 <li><input type="checkbox" disabled="" />
