--- a/todo.html
+++ b/todo.html
@@ -38,13 +38,22 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<p>[ ] Put glasses into racksack</p>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Put glasses into racksack</li>
+<li><input type="checkbox" disabled="" />
+Make carrot man as practice #intro-3d -&gt; 20-september-2023</li>
+<li><input type="checkbox" disabled="" />
+Fix delete cube bug #programming</li>
+<li><input type="checkbox" disabled="" />
+Do weekly integration #mathematics</li>
+</ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" checked="" />
 Go to drawing Tuesdays with Valmuen Art Addicts, at 18:00, in room B006</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make fish as practice #intro-3d -&gt; 19-september-2023</li>
 <li><input type="checkbox" disabled="" checked="" />
 Make mushroom guy as practice #intro-3d -&gt; 18-september-2023</li>
@@ -68,10 +77,6 @@ Go to Valmuen brettspillkveld onsdag, B006 fra kl 17:00 til 20:30</li>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Modern Graphics Programming files #programming</li>
-<li><input type="checkbox" disabled="" />
-Make carrot man as practice #intro-3d -&gt; 20-september-2023</li>
-<li><input type="checkbox" disabled="" />
-Fix delete cube bug #programming</li>
 <li><input type="checkbox" disabled="" />
 Complete Piano4All</li>
 <li><input type="checkbox" disabled="" />
