--- a/todo.html
+++ b/todo.html
@@ -40,8 +40,6 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Put glasses into racksack</li>
-<li><input type="checkbox" disabled="" />
 Make carrot man as practice #intro-3d -&gt; 20-september-2023</li>
 <li><input type="checkbox" disabled="" />
 Fix delete cube bug #programming</li>
@@ -53,6 +51,8 @@ Do weekly integration #mathematics</li>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" checked="" />
 Go to drawing Tuesdays with Valmuen Art Addicts, at 18:00, in room B006</li>
+<li><input type="checkbox" disabled="" checked="" />
+Put glasses into racksack</li>
 <li><input type="checkbox" disabled="" checked="" />
 Make fish as practice #intro-3d -&gt; 19-september-2023</li>
 <li><input type="checkbox" disabled="" checked="" />
@@ -69,7 +69,7 @@ Write script to do Modern Graphics Programming files (currently on tut05 out of 
 Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" checked="" />
 Read a book 20 minutes #recreation</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go to Valmuen brettspillkveld onsdag, B006 fra kl 17:00 til 20:30</li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
