Added wait list

--- a/todo.html
+++ b/todo.html
@@ -72,6 +72,8 @@ Read a book 20 minutes #recreation</li>
 <li><input type="checkbox" disabled="" checked="" />
 Go to Valmuen brettspillkveld onsdag, B006 fra kl 17:00 til 20:30</li>
 </ul>
+<h1 id="wait">Wait</h1>
+<h6 id="update-in-the-morning-1">Update in the morning</h6>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
