Added things to bring from Trondheim

--- a/todo.html
+++ b/todo.html
@@ -74,6 +74,28 @@ Go to Valmuen brettspillkveld onsdag, B006 fra kl 17:00 til 20:30</li>
 </ul>
 <h1 id="wait">Wait</h1>
 <h6 id="update-in-the-morning-1">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Get the sound bar</li>
+<li><input type="checkbox" disabled="" />
+Get the forkurs book</li>
+<li><input type="checkbox" disabled="" />
+Lehninger and other books</li>
+<li><input type="checkbox" disabled="" />
+Physics and games books</li>
+<li><input type="checkbox" disabled="" />
+Switch</li>
+<li><input type="checkbox" disabled="" />
+Saturn</li>
+<li><input type="checkbox" disabled="" />
+Another computer screen</li>
+<li><input type="checkbox" disabled="" />
+Mouse mat</li>
+<li><input type="checkbox" disabled="" />
+Mouse</li>
+<li><input type="checkbox" disabled="" />
+Computer</li>
+</ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
