Added homework for tomorrow to inbox

--- a/todo.html
+++ b/todo.html
@@ -45,6 +45,8 @@ Make carrot man as practice #intro-3d -&gt; 20-september-2023</li>
 Fix delete cube bug #programming</li>
 <li><input type="checkbox" disabled="" />
 Do weekly integration #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Watch Blender: Rig A Character From Scratch | CLEAR BEGINNERS GUIDE <a href="https://www.youtube.com/watch?v=eCtSviaHZ6U">https://www.youtube.com/watch?v=eCtSviaHZ6U</a></li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
