--- a/todo.html
+++ b/todo.html
@@ -75,7 +75,7 @@ Read a book 20 minutes #recreation</li>
 Go to Valmuen brettspillkveld onsdag, B006 fra kl 17:00 til 20:30</li>
 </ul>
 <h1 id="wait">Wait</h1>
-<h6 id="update-in-the-morning-1">Update in the morning</h6>
+<h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people.-update-in-the-morning">Deffered actions. Waiting for the right time or on other people. Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Get the sound bar</li>
