Added Philip's lesson to calendar

--- a/todo.html
+++ b/todo.html
@@ -75,7 +75,7 @@ Read a book 20 minutes #recreation</li>
 Go to Valmuen brettspillkveld onsdag, B006 fra kl 17:00 til 20:30</li>
 </ul>
 <h1 id="wait">Wait</h1>
-<h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people.-update-in-the-morning">Deffered actions. Waiting for the right time or on other people. Update in the morning</h6>
+<h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered actions. Waiting for the right time or on other people</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Get the sound bar</li>
@@ -274,6 +274,7 @@ Written exam -&gt; 11-december-2023 #mathematics-I</li>
                 }
                 if (month == 10)
                 {
+                cal.colorfulSelect('3/10/2023', 'jsCalendar-colorful-red');
                 cal.colorfulSelect('20/10/2023', 'jsCalendar-colorful-orange');
                 cal.colorfulSelect('23/10/2023', 'jsCalendar-colorful-blue');
                 cal.colorfulSelect('27/10/2023', 'jsCalendar-colorful-green');
