Added new project to plan

--- a/todo.html
+++ b/todo.html
@@ -113,6 +113,8 @@ Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
 Exam Practice Mathematics #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Complete Semester 1 Game School</li>
+<li><input type="checkbox" disabled="" />
+Help Philip excel at R1</li>
 </ul>
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
