Added another project

--- a/todo.html
+++ b/todo.html
@@ -102,6 +102,8 @@ Exam Practice Mathematics #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Complete Semester 1 Game School</li>
 <li><input type="checkbox" disabled="" />
+Do drawabox.com course</li>
+<li><input type="checkbox" disabled="" />
 Help Philip excel at R1</li>
 </ul>
 <h1 id="due-dates">Due dates</h1>
