Added item to inbox

--- a/todo.html
+++ b/todo.html
@@ -43,6 +43,8 @@
 Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
 Read a book 20 minutes #recreation</li>
+<li><input type="checkbox" disabled="" />
+Consdier (https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books)[(https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books)</li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
