Moved inbox to actions

--- a/todo.html
+++ b/todo.html
@@ -38,17 +38,15 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
 Read a book 20 minutes #recreation</li>
-<li><input type="checkbox" disabled="" />
-Consdier (https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books)[(https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books)</li>
-</ul>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />
+Consdier <a href="https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books">https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books</a></li>
 <li><input type="checkbox" disabled="" checked="" />
 Watch Blender: Rig A Character From Scratch | CLEAR BEGINNERS GUIDE <a href="https://www.youtube.com/watch?v=eCtSviaHZ6U">https://www.youtube.com/watch?v=eCtSviaHZ6U</a></li>
 <li><input type="checkbox" disabled="" />
@@ -67,25 +65,25 @@ Write script to do Modern Graphics Programming files (currently on tut05 out of 
 <h1 id="wait">Wait</h1>
 <h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered actions. Waiting for the right time or on other people</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Get the sound bar</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Get the forkurs book</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Lehninger and other books</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Physics and games books</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Switch</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Saturn</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Another computer screen</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Mouse mat</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Mouse</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Computer</li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
