Fixed spelling mistake

--- a/todo.html
+++ b/todo.html
@@ -50,7 +50,7 @@ Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
 Read a book 20 minutes #recreation</li>
 <li><input type="checkbox" disabled="" checked="" />
-Consdier <a href="https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books">https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books</a></li>
+Consider <a href="https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books">https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books</a></li>
 <li><input type="checkbox" disabled="" checked="" />
 Watch Blender: Rig A Character From Scratch | CLEAR BEGINNERS GUIDE <a href="https://www.youtube.com/watch?v=eCtSviaHZ6U">https://www.youtube.com/watch?v=eCtSviaHZ6U</a></li>
 <li><input type="checkbox" disabled="" />
