Trying to update html from windows

--- a/todo.html
+++ b/todo.html
@@ -39,105 +39,88 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
-Look into cat in stairway</li>
+<li><label><input type="checkbox" />Look into cat in
+stairway</label></li>
 </ul>
 <h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<h6
+id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign
+time. Revisit. Flag what needs to be done today. The battle is to
+remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
-Go for a long walk early #health</li>
-<li><input type="checkbox" disabled="" />
-Read a book 20 minutes #recreation</li>
-<li><input type="checkbox" disabled="" checked="" />
-Consider <a href="https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books">https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Watch Blender: Rig A Character From Scratch | CLEAR BEGINNERS GUIDE <a href="https://www.youtube.com/watch?v=eCtSviaHZ6U">https://www.youtube.com/watch?v=eCtSviaHZ6U</a></li>
-<li><input type="checkbox" disabled="" />
-Make carrot man as practice #intro-3d -&gt; 20-september-2023</li>
-<li><input type="checkbox" disabled="" />
-Fix delete cube bug #programming</li>
-<li><input type="checkbox" disabled="" />
-Do weekly integration #mathematics</li>
-<li><input type="checkbox" disabled="" />
-Implement polynomial devision #programming</li>
-<li><input type="checkbox" disabled="" />
-Implement PEMDAS, use a tree data structure #programming</li>
-<li><input type="checkbox" disabled="" />
-Write script to do Modern Graphics Programming files (currently on tut05 out of tut18), make it as an append and prepend comment option in solid #programming</li>
+<li><label><input type="checkbox" checked="" />Go for a long walk early
+#health</label></li>
+<li><label><input type="checkbox" checked="" />Read a book 20 minutes
+#recreation</label></li>
+<li><label><input type="checkbox" checked="" />Consider <a
+href="https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books">https://mrelusive.com/books/books.html?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books</a></label></li>
+<li><label><input type="checkbox" checked="" />Watch Blender: Rig A
+Character From Scratch | CLEAR BEGINNERS GUIDE <a
+href="https://www.youtube.com/watch?v=eCtSviaHZ6U">https://www.youtube.com/watch?v=eCtSviaHZ6U</a></label></li>
+<li><label><input type="checkbox" />Make carrot man as practice
+#intro-3d -&gt; 20-september-2023</label></li>
+<li><label><input type="checkbox" />Fix delete cube bug
+#programming</label></li>
+<li><label><input type="checkbox" />Do weekly integration
+#mathematics</label></li>
+<li><label><input type="checkbox" />Implement polynomial devision
+#programming</label></li>
+<li><label><input type="checkbox" />Implement PEMDAS, use a tree data
+structure #programming</label></li>
+<li><label><input type="checkbox" />Write script to do Modern Graphics
+Programming files (currently on tut05 out of tut18), make it as an
+append and prepend comment option in solid #programming</label></li>
 </ul>
 <h1 id="wait">Wait</h1>
-<h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered actions. Waiting for the right time or on other people</h6>
-<ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Get the sound bar</li>
-<li><input type="checkbox" disabled="" checked="" />
-Get the forkurs book</li>
-<li><input type="checkbox" disabled="" checked="" />
-Lehninger and other books</li>
-<li><input type="checkbox" disabled="" checked="" />
-Physics and games books</li>
-<li><input type="checkbox" disabled="" checked="" />
-Switch</li>
-<li><input type="checkbox" disabled="" checked="" />
-Saturn</li>
-<li><input type="checkbox" disabled="" checked="" />
-Another computer screen</li>
-<li><input type="checkbox" disabled="" checked="" />
-Mouse mat</li>
-<li><input type="checkbox" disabled="" checked="" />
-Mouse</li>
-<li><input type="checkbox" disabled="" checked="" />
-Computer</li>
-</ul>
+<h6
+id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered
+actions. Waiting for the right time or on other people</h6>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
-Modern Graphics Programming files #programming</li>
-<li><input type="checkbox" disabled="" />
-Complete Piano4All</li>
-<li><input type="checkbox" disabled="" />
-Complete Blender Character Creator v2.0 for Video Games Design Course</li>
-<li><input type="checkbox" disabled="" />
-Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
-<li><input type="checkbox" disabled="" />
-Exam Practice Mathematics #mathematics</li>
-<li><input type="checkbox" disabled="" />
-Complete Semester 1 Game School <a href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></li>
-<li><input type="checkbox" disabled="" />
-Do drawabox.com course</li>
-<li><input type="checkbox" disabled="" />
-Help Philip excel at R1</li>
+<li><label><input type="checkbox" />Modern Graphics Programming files
+#programming</label></li>
+<li><label><input type="checkbox" />Complete Piano4All</label></li>
+<li><label><input type="checkbox" />Complete Blender Character Creator
+v2.0 for Video Games Design Course</label></li>
+<li><label><input type="checkbox" />Complete Blender Creator 3: Learn 3D
+Modelling for Beginners</label></li>
+<li><label><input type="checkbox" />Exam Practice Mathematics
+#mathematics</label></li>
+<li><label><input type="checkbox" />Complete Semester 1 Game School <a
+href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></label></li>
+<li><label><input type="checkbox" />Do drawabox.com course</label></li>
+<li><label><input type="checkbox" />Help Philip excel at R1</label></li>
 </ul>
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 1 -&gt; 1-september-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" checked="" />
-Oblig 1 -&gt; 18-september-2023 #mathematics-I</li>
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 2 -&gt; 29-september-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" />
-Compulsory 2 -&gt; 20-october-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Oblig 2 -&gt; 23-october-2023 #mathematics-I</li>
-<li><input type="checkbox" disabled="" />
-Compulsory 3 -&gt; 27-october-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" />
-Compulsory 3 -&gt; 3-november-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Oblig 3 -&gt; 17-november-2023 #mathematics-I</li>
-<li><input type="checkbox" disabled="" />
-Folder due -&gt; 1-december-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Written exam -&gt; 6-december-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" />
-Written exam -&gt; 11-december-2023 #mathematics-I</li>
+<li><label><input type="checkbox" checked="" />Compulsory 1 -&gt;
+1-september-2023 #programming-I</label></li>
+<li><label><input type="checkbox" checked="" />Oblig 1 -&gt;
+18-september-2023 #mathematics-I</label></li>
+<li><label><input type="checkbox" checked="" />Compulsory 1 -&gt;
+22-september-2023 #intro-3d</label></li>
+<li><label><input type="checkbox" checked="" />Compulsory 2 -&gt;
+29-september-2023 #programming-I</label></li>
+<li><label><input type="checkbox" />Compulsory 2 -&gt; 20-october-2023
+#intro-3d</label></li>
+<li><label><input type="checkbox" />Oblig 2 -&gt; 23-october-2023
+#mathematics-I</label></li>
+<li><label><input type="checkbox" />Compulsory 3 -&gt; 27-october-2023
+#programming-I</label></li>
+<li><label><input type="checkbox" />Compulsory 3 -&gt; 3-november-2023
+#intro-3d</label></li>
+<li><label><input type="checkbox" />Oblig 3 -&gt; 17-november-2023
+#mathematics-I</label></li>
+<li><label><input type="checkbox" />Folder due -&gt; 1-december-2023
+#intro-3d</label></li>
+<li><label><input type="checkbox" />Written exam -&gt; 6-december-2023
+#programming-I</label></li>
+<li><label><input type="checkbox" />Written exam -&gt; 11-december-2023
+#mathematics-I</label></li>
 </ul>
-<h6 id="organize-each-day-triage.-then-weekly-big-picture">Organize each day (triage). Then weekly (big picture)</h6>
+<h6 id="organize-each-day-triage.-then-weekly-big-picture">Organize each
+day (triage). Then weekly (big picture)</h6>
 
         </div>
         <div class="six columns portrait" style="margin-top: 15%">
@@ -270,7 +253,7 @@ Written exam -&gt; 11-december-2023 #mathematics-I</li>
                 }
                 if (month == 10)
                 {
-                cal.colorfulSelect('3/10/2023', 'jsCalendar-colorful-red');
+                cal.colorfulSelect('5/10/2023', 'jsCalendar-colorful-red');
                 cal.colorfulSelect('20/10/2023', 'jsCalendar-colorful-orange');
                 cal.colorfulSelect('23/10/2023', 'jsCalendar-colorful-blue');
                 cal.colorfulSelect('27/10/2023', 'jsCalendar-colorful-green');
@@ -334,29 +317,29 @@ addWeekNumber(2, 1, 35);
 addWeekNumber(2, 2, 36);
 addWeekNumber(2, 3, 37);
 addWeekNumber(2, 4, 38);
-addWeekNumber(2, 5, 39);
-addWeekNumber(2, 6, 40);
+addWeekNumber(2, 5, 39); // Kjøkken, entre, stue
+addWeekNumber(2, 6, 40); // Søppel
 
 addWeekNumber(3, 1, 39);
 addWeekNumber(3, 2, 40);
-addWeekNumber(3, 3, 41);
-addWeekNumber(3, 4, 42);
-addWeekNumber(3, 5, 43);
-addWeekNumber(3, 6, 44);
+addWeekNumber(3, 3, 41); // Bad
+addWeekNumber(3, 4, 42); // Kjøkken stue entre
+addWeekNumber(3, 5, 43); // Søppel
+addWeekNumber(3, 6, 44); // Bad
 
 addWeekNumber(4, 1, 44);
-addWeekNumber(4, 2, 45);
-addWeekNumber(4, 3, 46);
-addWeekNumber(4, 4, 47);
-addWeekNumber(4, 5, 48);
-addWeekNumber(4, 6, 49);
+addWeekNumber(4, 2, 45); // Kjøkken stue entre
+addWeekNumber(4, 3, 46); // Søppel
+addWeekNumber(4, 4, 47); // Bad
+addWeekNumber(4, 5, 48); // Kjøkken stue entre
+addWeekNumber(4, 6, 49); // Søppel
 
 addWeekNumber(5, 1, 48);
 addWeekNumber(5, 2, 49);
-addWeekNumber(5, 3, 50);
-addWeekNumber(5, 4, 51);
-addWeekNumber(5, 5, 52);
-addWeekNumber(5, 6, 53);
+addWeekNumber(5, 3, 50); // Bad
+addWeekNumber(5, 4, 51); // Kjøkken stue entre
+addWeekNumber(5, 5, 52); // Søppel
+addWeekNumber(5, 6, 53); // Bad
 
 
 
