Changed top margin for website

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!-- Side column
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <div class="one-third column portrait">
+        <div class="one-third column portrait" style="margin-top: 25%">
           <a href=cv.pdf><img src=images/cv.png style="width:50px"></a>
           <a href=#publications><img src=images/publications.png style="width:50px"></a>
           <a href=https://github.com/alanhaugen><img src=images/github-mark.png style="width:50px"></a>
